--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,7 +31,7 @@
   </nav>
 
   <div class="sidebar-item">
-    <p>&copy; Greenwood Lab. Powered by <a href="http://jekyllrb.com/">jekyll</a>, <a href="http://getpoole.com/">poole</a>, 
+    <p>&copy; Greenwood Lab. Hosted on <a href="https://github.com/GreenwoodLab">Github</a>. Powered by <a href="http://jekyllrb.com/">jekyll</a>, <a href="http://getpoole.com/">poole</a>, 
           <a href="http://yihui.name/knitr/">knitr</a>, and
           <a href="http://johnmacfarlane.net/pandoc/">pandoc</a>.</p>
   </div>
